--- a/SaharokServerClient/Saharok/Styles/CustomizedWindow/VS2012WindowStyle.xaml
+++ b/SaharokServerClient/Saharok/Styles/CustomizedWindow/VS2012WindowStyle.xaml
@@ -25,7 +25,10 @@
 
     <!--Background-->
     <SolidColorBrush x:Key="Background" Color="#1C1C1C"/>
+    <!--<SolidColorBrush x:Key="LightBackgroundPoup" Color="#FF555557"/>-->
+
     <SolidColorBrush x:Key="LightBackground" Color="#2D2D30"/>
+
 
     <!--Foreground-->
     <SolidColorBrush x:Key="Foreground" Color="#FFFFFF"/>
@@ -56,10 +59,12 @@
     <SolidColorBrush x:Key="CloseButtonStrokeHighlighted" Color="#FFFFFF"/>
 
     <!--Menu-->
-    <SolidColorBrush x:Key="MenuSeparatorBorderBrush" Color="#333337"/>
+    <SolidColorBrush x:Key="MenuSeparatorBorderBrush" Color="#FF515151"/>
     <SolidColorBrush x:Key="MenuItemHighlightedBackground" Color="#3E3E40"/>
-    <SolidColorBrush x:Key="SubmenuItemBackground" Color="#1B1B1B"/>
-    <SolidColorBrush x:Key="SubmenuItemBackgroundHighlighted" Color="#333334"/>
+    <!--<SolidColorBrush x:Key="SubmenuItemBackground" Color="#1B1B1B"/>-->
+    <SolidColorBrush x:Key="SubmenuItemBackground" Color="#333337"/>
+    <!--<SolidColorBrush x:Key="SubmenuItemBackgroundHighlighted" Color="#333334"/>-->
+    <SolidColorBrush x:Key="SubmenuItemBackgroundHighlighted" Color="#FF515151"/>
     <SolidColorBrush x:Key="MenuDisabledForeground" Color="#656565"/>
 
     <!--Scroll Bar-->
@@ -111,11 +116,11 @@
                             BorderThickness="1"
                             BorderBrush="{TemplateBinding BorderBrush}" 
                             Background="{TemplateBinding Background}">-->
-                        <Grid 
+                    <Grid 
                             SnapsToDevicePixels="True"
                             Background="{TemplateBinding Background}">
-                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                        </Grid>
+                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    </Grid>
                     <!--</Border>-->
                     <ControlTemplate.Triggers>
                         <!--<Trigger Property="IsMouseOver" Value="True">
@@ -136,6 +141,11 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
+        <Style.Triggers>
+            <DataTrigger Binding="{Binding Path=MyProject}" Value="{x:Null}">
+                <Setter Property="Visibility" Value="Hidden"/>
+            </DataTrigger>
+        </Style.Triggers>
     </Style>
 
     <Style x:Key="SerarchButton" TargetType="Button">
@@ -806,8 +816,8 @@
                                         <Grid.ColumnDefinitions>
                                             <ColumnDefinition Width="36"/>
                                             <ColumnDefinition Width="Auto"/>
-                                            <ColumnDefinition />
-                                            <ColumnDefinition />
+                                            <ColumnDefinition Width="*"/>
+                                            <ColumnDefinition Width="75"/>
                                             <ColumnDefinition Width="34"/>
                                             <ColumnDefinition Width="34"/>
                                             <ColumnDefinition Width="34"/>
@@ -847,7 +857,7 @@
                                                 <MenuItem Header="Добавить другое" IsEnabled="False"/>
                                             </MenuItem>-->
 
-                                            <MenuItem Header="Справка" IsEnabled="False">
+                                            <MenuItem Header="Справка" IsEnabled="True" Command="{Binding ClickOpenReferenceWindow}">
                                             </MenuItem>
                                         </Menu>
                                         <!--<Grid 
@@ -872,23 +882,30 @@
                                         <Button
                                             Style="{StaticResource TitleButton}"
                                             Grid.Column="2"
-                                            Margin="20,0,0,0"
+                                            Margin="0,0,0,0"
                                             VerticalAlignment="Center"
-                                            HorizontalAlignment="Left"
+                                            HorizontalAlignment="Center"
                                             >
                                             <Button.Content>
                                                 <Grid>
-                                                    <TextBlock
-                                                        Margin="7,4,7,4"
-                                                        Text="{Binding Path=Title, Mode=OneWay, RelativeSource={RelativeSource TemplatedParent}}"
-                                                    />
+                                                    <TextBlock 
+                                                               Text="{Binding Path=Title, Mode=OneWay, RelativeSource={RelativeSource TemplatedParent}}"
+                                                               Margin ="7,4,7,4"
+                                                               >
+                                                    </TextBlock>
                                                 </Grid>
                                             </Button.Content>
+                                            <!--<Button.Resources>
+                                                <Style TargetType="Button">
+
+                                                </Style>
+                                            </Button.Resources>-->
                                         </Button>
-                                        <Grid Height="Auto" 
-                                                Width="Auto"
-                                                Grid.Column="3"
-                                                HorizontalAlignment="Right">
+                                        <Grid 
+                                            Height="Auto" 
+                                            Width="Auto"
+                                            Grid.Column="3"
+                                            HorizontalAlignment="Right">
                                             <Grid.ColumnDefinitions>
                                                 <ColumnDefinition Width="Auto"/>
                                                 <ColumnDefinition Width="Auto"/>
@@ -904,6 +921,12 @@
                                                 VerticalAlignment="Center"
                                                 Name="Server1"
                                                 >
+                                                <Ellipse.ToolTip>
+                                                    <ToolTip Content="{Binding IsServer1Tip}"
+                                                             Placement="Left"
+                                                             VerticalOffset ="12"
+                                                             />
+                                                </Ellipse.ToolTip>
                                                 <Ellipse.Effect>
                                                     <BlurEffect Radius="2"></BlurEffect>
                                                 </Ellipse.Effect>
@@ -930,6 +953,12 @@
                                                 HorizontalAlignment="Right"
                                                 VerticalAlignment="Center"
                                                 >
+                                                <Ellipse.ToolTip>
+                                                    <ToolTip Content="{Binding IsServer2Tip}"
+                                                             Placement="Left"
+                                                             VerticalOffset ="12"
+                                                             />
+                                                </Ellipse.ToolTip>
                                                 <Ellipse.Effect>
                                                     <BlurEffect Radius="2"></BlurEffect>
                                                 </Ellipse.Effect>
@@ -951,6 +980,7 @@
                                             x:Name="MinButton" 
                                             Grid.Column="4"
                                             VerticalAlignment="Top"
+                                            HorizontalAlignment="Right"
                                             Width="34"
                                             Height="26"
                                             Style="{StaticResource VS2012WindowStyleTitleBarButton}"
@@ -970,6 +1000,7 @@
                                             Grid.Column="5"
                                             x:Name="MaxButton" 
                                             VerticalAlignment="Top"
+                                            HorizontalAlignment="Right"
                                             Width="34"
                                             Height="26"
                                             Style="{StaticResource VS2012WindowStyleTitleBarButton}"
@@ -990,6 +1021,7 @@
                                             Grid.Column="6"
                                             x:Name="CloseButton" 
                                             VerticalAlignment="Top"
+                                            HorizontalAlignment="Right"
                                             Width="34"
                                             Height="26"
                                             Style="{StaticResource VS2012WindowStyleTitleBarButton}"
