--- a/SaharokServerClient/Saharok/View/CreateReferenceWindow.xaml
+++ b/SaharokServerClient/Saharok/View/CreateReferenceWindow.xaml
@@ -35,21 +35,23 @@
 				Foreground ="{StaticResource Foreground}" 
 				FontSize="14"
 				>
-				1.	Данная версия программного обеспечения распространяется бесплатно;<LineBreak />
+                1. Все авторские права на программу принадлежат Молочкову Дмитрию Алексеевичу;<LineBreak />
+                <LineBreak />
+				2.	Данная версия программного обеспечения распространяется по платной подписке, условия которой обговариваются с автором индивидуально;<LineBreak />
 				<LineBreak />
-				2.	Автор оставляет за собой право отменить  действие  данной  лицензии  для данной программы;<LineBreak />
+				3.	Автор оставляет за собой право отменить  действие  данной  лицензии  для данной программы;<LineBreak />
 				<LineBreak />
-				3.	Программа распространяется свободно, при условии, что настоящий  дистрибутив не изменен. Ни одно частное лицо или  организация  не  может брать плату за распространение данной программы без письменного разрешения автора.<LineBreak />
+				4.	Программа распространяется на условиях платной подписки, при условии, что настоящий  дистрибутив не изменен. Ни одно частное лицо или  организация  не  может брать плату за распространение данной программы без письменного разрешения автора.<LineBreak />
 				<LineBreak />
-				4.	Программа поставляется по принципу "AS IS" ("как есть"). Никакие гарантии не прилагаются и не предусматриваются. Вы используете данное программное  обеспечение на свой страх и риск. Автор программы не будет отвечать ни за какие потери или искажения данных, нарушения работоспособности других программ и системы, а также за любую упущенную выгоду в процессе использования или неправильного использования данного программного продукта.<LineBreak />
+				5.	Программа поставляется по принципу "AS IS" ("как есть"). Никакие гарантии не прилагаются и не предусматриваются. Вы используете данное программное  обеспечение на свой страх и риск. Автор программы не будет отвечать ни за какие потери или искажения данных, нарушения работоспособности других программ и системы, а также за любую упущенную выгоду в процессе использования или неправильного использования данного программного продукта.<LineBreak />
 				<LineBreak />
-				5.	Вы не можете эмулировать, создавать  новые  версии, сдавать в наем или аренду, продавать, изменять, декомпилировать, дизассемблировать, изучать код программы другими способами и использовать программу и ее компоненты иначе, чем определено текущими возможностями данной программы. Любое  такое  нелегальное  использование означает автоматическое и немедленное прекращение действия настоящего соглашения и может преследоваться по закону.<LineBreak />
+				6.	Вы не можете эмулировать, создавать  новые  версии, сдавать в наем или аренду, продавать, изменять, декомпилировать, дизассемблировать, изучать код программы другими способами и использовать программу и ее компоненты иначе, чем определено текущими возможностями данной программы. Любое  такое  нелегальное  использование означает автоматическое и немедленное прекращение действия настоящего соглашения и может преследоваться по закону.<LineBreak />
 				<LineBreak />
-				6.	Все права,  не  предоставленные  здесь  явно,  сохраняются  за  автором.<LineBreak />
+				7.	Все права,  не  предоставленные  здесь  явно,  сохраняются  за  автором.<LineBreak />
 				<LineBreak />
-				7.	Установка и использование  программы  означает,  что  вы  понимаете  положения    настоящего лицензионного соглашения и согласны с ними.<LineBreak />
+				8.	Установка и использование  программы  означает,  что  вы  понимаете  положения    настоящего лицензионного соглашения и согласны с ними.<LineBreak />
 				<LineBreak />
-				8.	Если почему-либо вы не согласны с этим лицензионным соглашением, Вам  необходимо  удалить файлы  дистрибутива  данной программы  с ваших  устройств хранения   информации и  прекратить использование программы.<LineBreak />
+				9.	Если почему-либо вы не согласны с этим лицензионным соглашением, Вам  необходимо  удалить файлы  дистрибутива  данной программы  с ваших  устройств хранения   информации и  прекратить использование программы.<LineBreak />
 				<LineBreak />
                 <LineBreak />Связаться с автором можно по почте: <Hyperlink RequestNavigate="Hyperlink_RequestNavigate" NavigateUri="mailto:saharok.application@gmail.com">saharok.application@gmail.com</Hyperlink><LineBreak />
 				<LineBreak />
