--- a/SaharokServerClient/Saharok/Styles/CustomizedWindow/VS2012WindowStyle.xaml
+++ b/SaharokServerClient/Saharok/Styles/CustomizedWindow/VS2012WindowStyle.xaml
@@ -1020,8 +1020,9 @@
                                             <MenuItem Header="Файл">
                                                 <MenuItem Header="Создать проект" Command="{Binding ClickOpenCreateProjectWindow}" />
                                                 <MenuItem Header="Открыть проект" Command="{Binding ClickLoadProject}"/>
+                                                <MenuItem Header="Выбрать разделы" Command="{Binding ClickChooseSectionsWindow}"/>
                                                 <Separator/>
-                                                <MenuItem Header="Закрыть" IsEnabled="False"/>
+                                                <!--<MenuItem Header="Закрыть" IsEnabled="False"/>-->
                                                 <MenuItem Header="Закрыть проект" Command="{Binding ClickCloseProject}"/>
                                                 <Separator/>
                                                 <!--<MenuItem Header="Сохранить" IsEnabled="False"/>
@@ -1582,11 +1583,11 @@
                                                                 <CollectionViewSource 
                                                                     Source="{Binding Files}"
                                                                     x:Key="Files"
-                                                                    IsLiveSortingRequested="True"
                                                                     >
-                                                                    <CollectionViewSource.SortDescriptions>
+                                                                    <!--IsLiveSortingRequested="False"-->
+                                                                    <!--<CollectionViewSource.SortDescriptions>
                                                                         <scm:SortDescription PropertyName="Name"/>
-                                                                    </CollectionViewSource.SortDescriptions>
+                                                                    </CollectionViewSource.SortDescriptions>-->
                                                                 </CollectionViewSource>
                                                             </ListBox.Resources>
                                                             <ListBox.ItemsSource>
@@ -1703,21 +1704,21 @@
                             Grid.Column="0"
                             Grid.Row="0"
                             >
-                            <Border Name ="BorderTrigger"
-                                    BorderThickness="0 0 0 3"
-                                    BorderBrush="#2d2d2f"
+                            <Border 
+                                Name ="BorderTrigger"
+                                BorderThickness="0 0 0 3"
+                                BorderBrush="#2d2d2f"
                                     >
                                 <Border.Triggers>
 
                                 </Border.Triggers>
-                                <StackPanel 
+                                <WrapPanel 
                                     Grid.Row="0"
                                     Name="HeaderPanel"
                                     IsItemsHost="True"
                                     Orientation="Horizontal"
                                     >
-
-                                </StackPanel>
+                                </WrapPanel>
                             </Border>
                         </Grid>
                         <ContentPresenter
@@ -1778,7 +1779,7 @@
                         Name="PanelBorder"
                         MinWidth="70"
                         BorderBrush="#2d2d2f"
-                        BorderThickness="2 0 2 1"
+                        BorderThickness="2"
                         >
                         <Grid 
                             Name="Panel" 
@@ -1788,7 +1789,7 @@
                                 VerticalAlignment="Center"
                                 HorizontalAlignment="Center"
                                 ContentSource="Header"
-                                Margin="10,4"
+                                Margin="10,2"
                                 />
                             <Grid.ContextMenu>
                                 <ContextMenu>
@@ -1796,7 +1797,7 @@
                                         Header="Сформировать в проект" 
                                         CommandParameter="{Binding}"  
                                         Command="{Binding Path=PlacementTarget.Tag.DataContext.ClickFormProject, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}"
-                                        />
+                                    />
 
                                 </ContextMenu>
                             </Grid.ContextMenu>
@@ -1880,7 +1881,7 @@
                 <ControlTemplate TargetType="{x:Type TextBox}">
                     <Grid Background="{TemplateBinding Background}" SnapsToDevicePixels="true">
                         <TextBlock Foreground="{StaticResource SearchTextForeground}" Margin="5,0,0,0" 
-                                   VerticalAlignment="Center" Name="search" Text="Search ..." Visibility="Hidden"/>
+                                   VerticalAlignment="Center" Name="search" Text="Search..." Visibility="Hidden"/>
                         <ScrollViewer x:Name="PART_ContentHost" Margin="1"/>
                     </Grid>
                     <ControlTemplate.Triggers>
@@ -1918,7 +1919,47 @@
                             Background="{TemplateBinding Background}">
                         <Grid SnapsToDevicePixels="true">
                             <TextBlock Foreground="{StaticResource SearchTextForeground}" Margin="5,0,0,0" 
-                                   VerticalAlignment="Center" Name="search" Text="Search ..." Visibility="Hidden"/>
+                                   VerticalAlignment="Center" Name="search" Text="Search..." Visibility="Hidden"/>
+                            <ScrollViewer x:Name="PART_ContentHost" Margin="1"/>
+                        </Grid>
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="TextBox.Text" Value="">
+                            <Setter TargetName="search" Property="Visibility" Value="Visible"/>
+                        </Trigger>
+                        <Trigger Property="TextBox.Text" Value="{x:Null}">
+                            <Setter TargetName="search" Property="Visibility" Value="Visible"/>
+                        </Trigger>
+                        <Trigger Property="IsMouseOver" Value="true">
+                            <Setter Property="Background" Value="{StaticResource TextBoxBackgroundSelected}" />
+                            <Setter TargetName="search" Property="Foreground" Value="{StaticResource Foreground}" />
+                        </Trigger>
+                        <Trigger Property="IsFocused" Value="true">
+                            <Setter Property="Background" Value="{StaticResource TextBoxBackgroundSelected}" />
+                            <Setter TargetName="search" Property="Visibility" Value="Hidden"/>
+                            <Setter Property="BorderBrush" Value="{StaticResource BorderBrushSelected}"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style TargetType="TextBox" x:Key="BlueBrushSearchTextBox2">
+        <Setter Property="Background" Value="{StaticResource TextBoxBackground}"/>
+        <Setter Property="Foreground" Value="{StaticResource Foreground}"/>
+        <Setter Property="CaretBrush" Value="{StaticResource Foreground}"/>
+        <Setter Property="BorderBrush" Value="{StaticResource BorderBrushNormal}"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type TextBox}">
+                    <Border SnapsToDevicePixels="True"
+                            BorderThickness="1"
+                            BorderBrush="{TemplateBinding BorderBrush}" 
+                            Background="{TemplateBinding Background}">
+                        <Grid SnapsToDevicePixels="true">
+                            <TextBlock Foreground="{StaticResource SearchTextForeground}" Margin="5,0,0,0" 
+                                   VerticalAlignment="Top" Name="search" Text="Перетащите сюда папки..." Visibility="Hidden"/>
                             <ScrollViewer x:Name="PART_ContentHost" Margin="1"/>
                         </Grid>
                     </Border>
